Permitir proyectos sin clientes
