# app/Http/Controllers/Project/ControlProjectTrait.php
@@ -8,14 +8,17 @@ trait ControlProjectTrait {
   protected $projectValidationRules = [
         'name' => 'required|string|min:2|max:100',
         'description' => 'nullable|string|max:1000',
-        'customer_id' => 'required|integer|exists:customers,id'
+        'customer_id' => 'nullable|integer|exists:customers,id'
   ];
 
   protected function isCustomerIdValid($user, $customerId) {
-    $customer = Customer::find($customerId);
-    if(! $customer) {
-      return false;
+    if($customerId) {
+      $customer = Customer::find($customerId);
+      if(! $customer) {
+        return false;
+      }
+      return $user->can('update', $customer);
     }
-    return $user->can('update', $customer);
+    return true;
   }
 }
